# FluentUI

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
fluentui/: __init__.py
fluentui/framesless/: __init__.py  macos.py  win32_utils.py  windows.py
fluentui/framesless/title_bar/: __init__.py  title_bar.py  title_bar_buttons.py
fluentui/resources/: resources.qrc
fluentui/resources/qss/: button.qss  dialog.qss  line_edit.qss  list_view.qss  menu.qss  navigation.qss  radio_button.qss  setting_card.qss  tool_tip.qss  window.qss
fluentui/utils/: __init__.py  action.py  color.py  font.py  icon.py  screen.py  style_sheet.py
fluentui/widgets/: __init__.py  button.py  dialog.py  line_edit.py  list_view.py  menu.py  progress_bar.py  radio_button.py  scroll_bar.py  setting_card.py  slider.py  switch_button.py  table_view.py  tool_bar.py  tool_tip.py  widget.py  window.py
fluentui/widgets/navigation/: __init__.py  navigation_interface.py  navigation_panel.py  navigation_widget.py
tests/: test_dialog.py  test_frameless.py  test_line_edit.py  test_list_view.py  test_menu.py  test_navigation.py  test_progress_bar.py  test_push_button.py  test_radio_button.py  test_scroll_bar.py  test_setting_card.py  test_slider.py  test_switch_button.py  test_tool_bar.py  test_tool_tip.py
