[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fluentui"
dependencies = [
    "pycocoa; platform_system == 'Darwin'",
    "pyobjc; platform_system == 'Darwin'",
    "pyside6",
    "pywin32; platform_system == 'Windows'",
]
requires-python = ">=3.10"
authors = [{ name = "Tiahong Liang", email = "lngtnhng97@gmail.com" }]
description = "A PySide6 widgets library based on Microsoft Fluent Design System."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "fluentui.__version__" }